--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,7 @@
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
+    <color name="colorPurple">#BB86FC</color>
+    <color name="color_bg_selected">#FFD54F</color>
+    <color name="radioButtonTint">#466CAA</color>
 </resources>
