--- a/app/src/main/res/drawable/radio_group_selector.xml
+++ b/app/src/main/res/drawable/radio_group_selector.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_checked="true" android:drawable="@color/color_bg_selected"/>
+    <item android:state_checked="true"  >
+        <shape android:shape="rectangle">
+            <stroke android:width="1dp" android:color="@color/colorPrimary"/>
+            <solid android:color="@color/color_bg_selected"/>
+            <corners android:radius="4dp"/>
+        </shape>
+    </item>
     <item android:state_checked="false" android:drawable="@drawable/radiobutton_background"/>
 </selector>
