--- a/app/src/main/res/drawable/radiobutton_background.xml
+++ b/app/src/main/res/drawable/radiobutton_background.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/material_on_surface_emphasis_medium" />
+    <solid android:color="@color/white" />
     <corners android:radius="4dp"/>
+    <stroke android:color="@color/colorPrimary"
+        android:width="1dp"/>
 </shape>
