--- a/app/src/main/res/layout/fragment_add_answer.xml
+++ b/app/src/main/res/layout/fragment_add_answer.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="32dp"
         android:gravity="center"
-        android:text="Cevap Ekle"
+        android:text="@string/add_question_title"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,8 +51,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Doğru"
-        android:visibility="visible"
+        android:backgroundTint="@color/colorPrimary"
+        android:text="@string/is_correct_str"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="4"
         app:layout_constraintTop_toBottomOf="@id/tvAddAnswerTitle" />
@@ -79,7 +80,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:text="Doğru"
+        android:backgroundTint="@color/colorPrimary"
+        android:text="@string/is_correct_str"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="4"
@@ -106,7 +108,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:text="Doğru"
+        android:backgroundTint="@color/colorPrimary"
+        android:text="@string/is_correct_str"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="4"
@@ -133,7 +136,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:text="Doğru"
+        android:backgroundTint="@color/colorPrimary"
+        android:text="@string/is_correct_str"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="4"
@@ -147,7 +151,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:text="Geri Dön"
+        android:backgroundTint="@color/colorPrimary"
+        android:text="@string/back_str"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etAnswerD" />
