--- a/app/src/main/res/layout/fragment_add_question.xml
+++ b/app/src/main/res/layout/fragment_add_question.xml
@@ -45,6 +45,7 @@
         android:text="@string/btn_add"
         app:layout_constraintTop_toBottomOf="@id/editTextQuestion"
         app:layout_constraintEnd_toEndOf="parent"
+        android:backgroundTint="@color/colorPrimary"
         app:layout_constraintStart_toStartOf="parent" />
 
 
@@ -57,6 +58,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:backgroundTint="@color/colorPrimary"
         android:layout_margin="8dp"
         />
 
